maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:56: error: '=' expected but ';' found.
  var bagglePos = int[2]
^JediEscaper:56: error: identifier expected but integer literal found.
  var bagglePos = int[2]
                      ^JediEscaper:57: error: ']' expected but ';' found.
  bagglePos = foundBaggle()
^